# lidar-odometry-comparison

./: .gitignore  README.md  run_fastlio2_rcampus.sh  run_limoncello_rcampus.sh  run_resple_rcampus.sh
configs/fast_lio2/: kitti_seq00.yaml
configs/genz_lio/: kitti_seq00.yaml
configs/limoncello/: kitti_seq00.yaml
configs/ntu_viral_eee03/: fast_lio2.yaml  genz_lio.yaml  limoncello.yaml  resple.yaml  traj_lo.yaml
configs/resple/: config_rcampus.yaml
configs/trajlo/: config_kitti_seq00.yaml
fast_lio2/: CMakeLists.txt  package.xml
fast_lio2/config/: r_campus.yaml
fast_lio2/src/: laserMapping.cpp  preprocess.cpp
genz_lio/: CMakeLists.txt  package.xml
genz_lio/config/: r_campus.yaml
genz_lio/include/: common_lib.h
genz_lio/include/genz_lio/: adaptive_voxelizer.hpp  common_lib.h
genz_lio/launch/: mapping.launch.py
genz_lio/src/: genz_lio_node.cpp  preprocess.h
scripts/: convert_kitti_gt_to_tum.py  convert_kitti_to_ros2bag.py  download_kitti_seq00.sh  evaluate_ate_kitti.sh  generate_synthetic_imu.py  play_rcampus_bag.sh  record_poses_tum.py  run_fastlio2_kitti.sh  run_fastlio2_rcampus.sh  run_genz_lio_kitti.sh  run_genz_lio_rcampus.sh  run_limoncello_kitti.sh  run_limoncello_rcampus.sh  run_ntu_viral_eee03_pipeline.sh  run_resple_rcampus.sh  run_trajlo_kitti.sh  run_trajlo_rcampus.sh  save_odometry_tum.py
traj_lo/: CMakeLists.txt  run_trajlo_headless.cpp
traj_lo/data/: config_r_campus.yaml
